# ChangeLog for net-misc/unison
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/unison/ChangeLog,v 1.59 2008/12/04 18:48:33 darkside Exp $

  04 Dec 2008; Jeremy Olexa <darkside@gentoo.org> unison-2.13.16-r1.ebuild,
  unison-2.27.57-r1.ebuild:
  s/gtk2-ssh-askpass/ssh-askpass-fullscreen/ due to a pkgmove

  03 Jul 2008; Alexis Ballier <aballier@gentoo.org> -unison-2.13.16.ebuild:
  remove unslotted version

  30 Jun 2008; Raúl Porcel <armin76@gentoo.org> unison-2.27.57-r1.ebuild:
  sparc stable wrt #229187

  26 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  unison-2.27.57-r1.ebuild:
  stable amd64, bug 229187

  25 Jun 2008; nixnut <nixnut@gentoo.org> unison-2.27.57-r1.ebuild:
  Stable on ppc wrt bug 229187

  24 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  unison-2.27.57-r1.ebuild:
  stable x86, bug 229187

  24 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  unison-2.13.16-r1.ebuild, unison-2.27.57-r1.ebuild:
  Add support for no-ocamlopt installs, bug #229129

  16 Jun 2008; Alexis Ballier <aballier@gentoo.org> unison-2.13.16.ebuild:
  quote variables and dont dodoc copying

  16 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  -files/unison-2.12.0-gtk2-bug.patch, -files/unison-2.17.1-io-error.patch,
  -files/ocaml-3.08-extnames.patch, -unison-2.12.0-r1.ebuild,
  -unison-2.17.1-r1.ebuild, -unison-2.27.57.ebuild:
  remove unused versions

*unison-2.13.16-r1 (16 Jun 2008)

  16 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  +unison-2.13.16-r1.ebuild:
  slotted 2.13.16 for bug #183019

  13 Jun 2008; Matti Bickel <mabi@gentoo.org> unison-2.27.57-r1.ebuild:
  ~ppc added (bug #207746)

  14 Apr 2008; Raúl Porcel <armin76@gentoo.org> unison-2.27.57-r1.ebuild:
  Add ~sparc wrt #207746

  10 Apr 2008; Markus Meier <maekke@gentoo.org> unison-2.27.57-r1.ebuild:
  add ~x86, bug #207746

*unison-2.27.57-r1 (07 Apr 2008)

  07 Apr 2008; Alexis Ballier <aballier@gentoo.org>